test/asm/line-continuation-whitespace.err
error: Label `foo` created outside of a `SECTION`
    at line-continuation-whitespace.asm(7)
Assembly aborted with 1 error!
